fix search box - focus => text-align: left

--- a/instagram/dashboard/styles/header.css
+++ b/instagram/dashboard/styles/header.css
@@ -24,6 +24,10 @@
   border-radius: 5px;
 }
 
+.header__search:focus {
+  text-align: left;
+}
+
 .header__icons i {
   font-size: 24px;
 }
